--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
         h1 {
             text-transform: uppercase;
-            font-size: 2.4rem;
+            font-size: 1.8rem;
             font-weight: 800;
             text-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
         }
@@ -125,8 +125,8 @@
 <body>
     <main>
         <header>
-            <h1>🛣️ How The Roads?</h1>
-            <h3>hope this helps</h3>
+            <h1>How The Roads? 🛣️</h1>
+            <h3>hope this helps...</h3>
         </header>
         <div class="video-container">
             <div class="video-item">
