--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             font-size: 1.2rem;
             font-weight: 500;
             color: rgba(255, 255, 255, 0.5);
-            font-style: italic;
         }
         main {
             display: flex;
@@ -126,7 +125,7 @@
     <main>
         <header>
             <h1>How The Roads? 🛣️</h1>
-            <h3>hope this helps...</h3>
+            <h2 id="temperature-text">Loading temperature...</h2>
         </header>
         <div class="video-container">
             <div class="video-item">
@@ -239,7 +238,7 @@
             </div>
         </div>
         <footer>
-            <h2 id="temperature-text">Loading temperature...</h2>
+            <h3>safe travels</h3>
             <h3>made in mo</h3>
         </footer>
     </main>
