--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
         }
         h3 {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             font-weight: 500;
-            color: rgba(255, 255, 255, 0.5);
+            color: rgba(255, 255, 255, 0.6);
         }
         small {
             font-size: 0.8rem;
@@ -91,10 +91,11 @@
             justify-content: space-between;
             align-items: center;
         }
-        header nav {
+        header nav,
+        footer nav {
             display: flex;
             align-items: center;
-            gap: 1.5rem;
+            gap: 0.75rem;
             flex-wrap: wrap;
         }
         .video-item {
@@ -144,7 +145,7 @@
         <header>
             <h1>How The Roads? 🛣️</h1>
             <nav>
-                <h2 id="temperature-text">Loading temperature...</h2>
+                <h2 id="temperature-text">fetching...</h2>
                 <h2><a href="#" target="_blank">🍎 get the app</a></h2>
             </nav>
         </header>
@@ -259,8 +260,11 @@
             </div>
         </div>
         <footer>
-            <h3>❤️ modot cams <small>(refresh if videos are frozen)</small></h3>
-            <h3>safe travels kc</h3>
+            <h3><a href="/">🔄 refresh if videos are frozen</a></h3>
+            <nav>
+                <h3><a href="https://forms.gle/ZnyUcmjtj7SFWeyo8" target="_blank">💬 feedback</a></h3>
+                <h3>safe travels kc</h3>
+            </nav>
         </footer>
     </main>
     <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
@@ -335,7 +339,7 @@
                 const temp = Math.round(data.main.temp);
                 const weatherCode = data.weather[0].id;
                 const emoji = getWeatherEmoji(weatherCode);
-                document.getElementById('temperature-text').textContent = `${emoji} it's currently ${temp}°f`;
+                document.getElementById('temperature-text').textContent = `${emoji} ${temp}°f`;
             })
             .catch(error => {
                 console.error('Error fetching weather:', error);
