--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h1>How The Roads? 🛣️</h1>
             <nav>
                 <h2 id="temperature-text">fetching...</h2>
-                <h2><a href="#" target="_blank">🍎 get the app</a></h2>
+                <h2><a href="https://apps.apple.com/us/app/how-the-roads/id6742173400" target="_blank">🍎 get the app</a></h2>
             </nav>
         </header>
         <div class="video-container">
