--- a/index.html
+++ b/index.html
@@ -258,6 +258,24 @@
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M029NBC-07-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
                 </video>
             </div>
+            <div class="video-item">
+                <h2>I-35 NB at US-69</h2>
+                <video controls crossorigin playsinline autoplay muted>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M035NBC-56-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-35 SB at MO-92</h2>
+                <video controls crossorigin playsinline autoplay muted>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M035SBC-62-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-435 EB at US-169</h2>
+                <video controls crossorigin playsinline autoplay muted>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M435EBC-61-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
         </div>
         <footer>
             <h3><a href="/">🔄 refresh if videos are frozen</a></h3>
