--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <body>
     <main>
         <header>
-            <h1>How The Roads? 🛣️</h1>
+            <h1>How's The Roads? 🛣️</h1>
             <nav>
                 <h2 id="temperature-text">fetching...</h2>
                 <h2><a href="https://apps.apple.com/us/app/how-the-roads/id6742173400" target="_blank" class="app-icon"><img src="/appicon.jpg" alt="app icon" /> get the app</a></h2>
