--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             </div>
         </div>
         <footer>
-            <h3><a href="/">🔄 click here to refresh frozen videos</a></h3>
+            <h3><a href="/">🔄 click here to refresh frozen cams</a></h3>
             <nav>
                 <h3><a href="https://forms.gle/ZnyUcmjtj7SFWeyo8" target="_blank">💬 request</a></h3>
                 <h3>🛣️ safe travels</h3>
