--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             text-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
         }
         h2 {
-            font-size: 1.2rem;
-            font-weight: 500;
+            font-size: 1.1rem;
+            font-weight: 600;
             text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
         }
         h3 {
@@ -85,6 +85,7 @@
             max-width: 1200px;
             gap: 0.75rem;
             width: 100%;
+            animation: welcome 0.25s ease-in-out;
         }
         header,
         footer {
@@ -129,15 +130,17 @@
             border: 4px solid rgba(255, 255, 255, 0.2);
             border-radius: 0.75rem;
             overflow: hidden;
+            animation: welcome 0.5s ease-in-out;
         }
         .video-item h2 {
             background-color: rgba(0, 0, 0, 0.5);
             padding: 0.75rem;
+            text-align: center;
         }
         .video-item video {
             width: 100%;
             height: 100%;
-            /* object-fit: cover; */
+            object-fit: cover;
         }
         .vjs-theme-city {
             --vjs-theme-city--primary: var(--color-primary);
@@ -158,6 +161,17 @@
         .plyr--video .plyr__controls {
             background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.6));
             padding: 8px;
+        }
+        
+        @keyframes welcome {
+            from {
+                opacity: 0;
+                transform: translateY(10rem);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
