--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOW THE ROADS?</title>
-    <meta name="description" content="KC COMMUTE CAMS">
+    <title>HOW'S THE ROADS?</title>
+    <meta name="description" content="Check live KCMO traffic cams to navigate weather and road conditions with ease. Plan your commute and avoid delays with real-time updates.">
+    <meta name="keywords" content="KCMO traffic cameras, Kansas City road conditions, live traffic cams KC, Kansas City weather traffic, real-time road conditions KC, KCMO commute updates, Missouri highway cameras, KC traffic live feed, winter road conditions Kansas City, I-70 traffic cam KC">
+    <meta name="author" content="How's the Roads?">
+    <meta name="robots" content="index, follow">
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Flag-map_of_Missouri.svg/682px-Flag-map_of_Missouri.svg.png" />
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
     <style>
@@ -316,7 +319,7 @@
             </div>
         </div>
         <footer>
-            <h3><a href="/">🔄 click here to refresh frozen cams</a></h3>
+            <h3><a href="/">🔄 click to refresh frozen cams</a></h3>
             <nav>
                 <h3><a href="https://forms.gle/ZnyUcmjtj7SFWeyo8" target="_blank">💬 request</a></h3>
                 <h3>🛣️ safe travels</h3>
