--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Flag-map_of_Missouri.svg/682px-Flag-map_of_Missouri.svg.png" />
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
+    <script src="https://kit.fontawesome.com/53df3a2a07.js" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
@@ -181,13 +182,10 @@
 <body>
     <main>
         <header>
-            <div class="logo">
-                <h1>How's The Roads?</h1>
-                <img src="/kc.svg" alt="kcmo" />
-            </div>
+            <h1><i class="fa-solid fa-road"></i> How's The Roads?</h1>
             <nav>
                 <h2 id="temperature-text">fetching...</h2>
-                <h2><a href="https://apps.apple.com/us/app/how-the-roads/id6742173400" target="_blank" class="app-icon"><img src="/appicon.jpg" alt="app icon" /> get the app</a></h2>
+                <h2><a href="https://apps.apple.com/us/app/how-the-roads/id6742173400" target="_blank" class="app-icon"><img src="/appicon.jpg" alt="app icon" /> get the app <i class="fa-solid fa-arrow-up-right-from-square"></i></a></h2>
             </nav>
         </header>
         <div class="video-container">
@@ -319,10 +317,13 @@
             </div>
         </div>
         <footer>
-            <h3><a href="/">🔄 click to refresh frozen cams</a></h3>
+            <h3><a href="/"><i class="fa-solid fa-arrows-rotate"></i> click to refresh frozen cams</a></h3>
             <nav>
-                <h3><a href="https://forms.gle/ZnyUcmjtj7SFWeyo8" target="_blank">💬 request</a></h3>
-                <h3>🛣️ safe travels</h3>
+                <h3><a href="https://forms.gle/ZnyUcmjtj7SFWeyo8" target="_blank"><i class="fa-solid fa-video"></i> request</a></h3>
+                <div class="logo">
+                    <h3>safe travels</h3>
+                    <img src="/kc.svg" alt="kcmo" />
+                </div>
             </nav>
         </footer>
     </main>
