no data collected

--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
             <h3><a href="/"><i class="fa-solid fa-arrows-rotate"></i> click to refresh frozen cams</a></h3>
             <nav>
                 <h3><a href="https://forms.gle/ZnyUcmjtj7SFWeyo8" target="_blank"><i class="fa-solid fa-video"></i> request</a></h3>
+                <h3><i class="fa-solid fa-ban"></i> no data collected</h3>
                 <div class="logo">
                     <h3>safe travels</h3>
                     <img src="/kc.svg" alt="kcmo" />
