added more cams

--- a/index.html
+++ b/index.html
@@ -252,6 +252,24 @@
                 </video>
             </div>
             <div class="video-item">
+                <h2>I-35 NB at Front St</h2>
+                <video controls crossorigin playsinline autoplay muted>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M035NBC-08A-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-70 WB at Main St</h2>
+                <video controls crossorigin playsinline autoplay muted>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M070WBC-02-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
+                <h2>I-670 WB past Summit St</h2>
+                <video controls crossorigin playsinline autoplay muted>
+                    <source src="https://5fca316e7c40f.streamlock.net/live-secure/M670WBIPC-01B-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
+                </video>
+            </div>
+            <div class="video-item">
                 <h2>I-435 NB before MO-210</h2>
                 <video controls crossorigin playsinline autoplay muted>
                     <source src="https://5fca316e7c40f.streamlock.net/live-secure/M435NBIPC-19-LQ.stream/playlist.m3u8" type="application/x-mpegURL">
