--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             gap: 0.25rem;
             background-color: var(--color-secondary);
             padding: 0.75rem;
-            border-radius: 9999px;
+            border-radius: 0.75rem;
             color: var(--color-primary);
             text-shadow: none;
             box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
