--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="KCMO traffic cameras, Kansas City road conditions, live traffic cams KC, Kansas City weather traffic, real-time road conditions KC, KCMO commute updates, Missouri highway cameras, KC traffic live feed, winter road conditions Kansas City, I-70 traffic cam KC, KC">
     <meta name="author" content="How's the Roads?">
     <meta name="robots" content="index, follow">
-    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Flag-map_of_Missouri.svg/682px-Flag-map_of_Missouri.svg.png" />
+    <link rel="icon" type="image/svg+xml" href="https://upload.wikimedia.org/wikipedia/commons/c/cb/Logo_of_Kansas_City%2C_Missouri.svg" />
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
     <script src="https://kit.fontawesome.com/53df3a2a07.js" crossorigin="anonymous"></script>
     <style>
