--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="author" content="How's the Roads?">
     <meta name="robots" content="index, follow">
     
+    <!-- Smart App Banner for iOS with additional parameters -->
+    <meta name="apple-itunes-app" content="app-id=6742173400">
+    
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="How's The Roads? - Live KC Traffic Cameras">
     <meta property="og:description" content="Check live KCMO traffic cams to navigate weather and road conditions with ease. Plan your commute and avoid delays with real-time updates.">
