--- a/index.html
+++ b/index.html
@@ -50,15 +50,12 @@
             background-color: var(--color-primary);
             color: var(--color-secondary);
         }
-        html {
-            background-color: var(--color-primary);
-        }
         body {
             font-family: "Public Sans", sans-serif;
             position: relative;
             overflow-x: hidden;
             color: white;
-            background-color: var(--color-primary);
+            background-color: black;
         }
         a {
             transition: all 0.15s ease-in-out;
@@ -97,6 +94,7 @@
             padding-bottom: 0;
             position: relative;
             z-index: 1; /* Ensure content is above the overlay */
+            background-color: var(--color-primary);
         }
         header,
         footer,
