added link to weather

--- a/index.html
+++ b/index.html
@@ -288,8 +288,12 @@
         <header>
             <h1><i class="fa-solid fa-road"></i> How's The Roads?</h1>
             <nav>
-                <h2 id="temperature-text">fetching...</h2>
-                <a href="https://apps.apple.com/us/app/how-the-roads/id6742173400" target="_blank" class="highlight highlight-app">get the app <small>new!</small><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <a href="https://forecast.weather.gov/MapClick.php?CityName=Kansas+City&state=MO&site=EAX&textField1=39.0904&textField2=-94.5837&e=0" 
+                   target="_blank" 
+                   title="View detailed KC weather forecast">
+                    <h2 id="temperature-text">fetching...</h2>
+                </a>
+                <a href="https://apps.apple.com/us/app/hows-the-roads/id6742173400" target="_blank" class="highlight highlight-app">get the app <small>new!</small><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </nav>
         </header>
         <div id="loading-message" class="loading-message">
