--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <meta name="twitter:title" content="How's The Roads? - Live Kansas City Traffic Cameras">
     <meta name="twitter:description" content="Check live KCMO traffic cams to navigate weather and road conditions with ease. Plan your commute and avoid delays with real-time updates.">
     <meta name="twitter:image" content="https://howstheroads.com/og.png">
-    <meta name="twitter:site" content="@howtheroads">
+    <meta name="twitter:site" content="@howstheroads">
     
     <!-- Favicon and Apple Touch Icons -->
     <link rel="icon" type="image/png" href="/favicon.png">
