--- a/privacy.html
+++ b/privacy.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Privacy Policy
+---
+
 <h1>Privacy Policy</h1>
 <h2>No data of any kind is collected, shared, or stored.</h2>
 <h2>No cookies are used.</h2>
